# uiaitest

./: .gitignore  现状方案.md
docs/: QCon AI驱动UI自动化测试分享.md  architecture-design.md  browser-use-analysis.md  instructions.md  midsene架构报告.md  overview.md  playwright-cli-analysis.md  playwright-mcp-analysis.md  playwright-python-analysis.md  分析报告.md  可行性分析报告.md  待开发.md  架构设计.md
docs/instructions/: README.md  (+11 more)
reports/: report_20260611_024342.html  report_20260611_024342.json  report_20260611_024421.html  report_20260611_024421.json  report_20260611_030129.html  report_20260611_030129.json
tests/: test_architecture.py
uiai/: __init__.py  cli.py  config.py  pyproject.toml
uiai/agent/: base.py  code_recorder.py  collaboration.py  context.py  executor.py  explorer.py  generator.py  healer.py  intent_router.py  judge.py  llm.py  loop_detector.py  message_compactor.py  planner.py  prompt_template.py
uiai/assertion/: engine.py
uiai/core/: cache.py  capability.py  checkpoint.py  data_driver.py  data_factory.py  deep_locator.py  environment.py  eventbus.py  fixtures.py  hooks.py  knowledge.py  locator.py  page_object.py  perception.py  platform.py  resilience.py  result.py  security.py  skill.py  test_case.py  watchdog.py
uiai/dashboard/: __init__.py  server.py
uiai/distributed/: __init__.py  docker_pool.py  master.py  worker.py
uiai/examples/: basic_test.py
uiai/executor/: appium_executor.py  base.py  factory.py  maestro_executor.py  network.py  playwright_executor.py
uiai/healing/: healer.py
uiai/mcp/: server.py
uiai/monitoring/: __init__.py  alert.py  flaky_detector.py
uiai/orchestrator/: agent_registry.py  browser_pool.py  orchestrator.py  task_queue.py
uiai/performance/: __init__.py  lighthouse.py
uiai/plugins/: __init__.py  builtin.py  manager.py
uiai/report/: generator.py
uiai/runner/: __init__.py  pytest_plugin.py
uiai/visual/: comparator.py  snapshot.py  visual_agent.py
