[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uiai"
version = "1.0.0"
description = "UIAI - AI驱动的UI自动化测试框架（六Agent协作+四层降级+三层缓存+知识沉淀）"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "UIAI Team"}
]

dependencies = [
    "playwright>=1.40.0",
    "appium-python-client>=3.1.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
qwen = ["dashscope"]
seed = ["volcengine-python-sdk"]
ocr = ["paddleocr>=2.6.0"]
all = ["dashscope", "volcengine-python-sdk", "paddleocr>=2.6.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0"]

[project.scripts]
uiai = "uiai.cli:main"

[tool.setuptools.packages.find]
include = ["uiai*"]
